--- a/index.html
+++ b/index.html
@@ -9,25 +9,79 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Inter', sans-serif; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
+        body { 
+            font-family: 'Inter', sans-serif; 
+            -webkit-font-smoothing: antialiased; 
+            -moz-osx-font-smoothing: grayscale;
+            position: relative; /* Diperlukan untuk animasi background */
+            overflow: hidden; /* Mencegah scroll karena animasi */
+        }
         .glass-card { background: rgba(255, 255, 255, 0.05); backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px); border: 1px solid rgba(255, 255, 255, 0.1); }
         .smooth-transition { transition: all 0.3s ease-in-out; }
-        .view-screen { display: none; }
+        .view-screen { 
+            display: none; 
+            position: relative; /* Memastikan konten di atas animasi */
+            z-index: 2;
+        }
         .view-screen.active { display: flex; }
         .pin-dot { width: 1rem; height: 1rem; border-radius: 50%; border: 2px solid #67e8f9; }
         .pin-dot.filled { background-color: #67e8f9; }
         @keyframes shake { 0%, 100% { transform: translateX(0); } 25% { transform: translateX(-5px); } 75% { transform: translateX(5px); } }
         .shake { animation: shake 0.3s ease-in-out; }
+
+        /* === CSS Animasi Kotak Mengambang === */
+        .bg-bubbles {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+        }
+
+        .bg-bubbles li {
+            position: absolute;
+            list-style: none;
+            display: block;
+            width: 40px;
+            height: 40px;
+            background-color: rgba(255, 255, 255, 0.1);
+            bottom: -160px;
+            animation: square 25s infinite;
+            transition-timing-function: linear;
+            border-radius: 5px;
+        }
+
+        .bg-bubbles li:nth-child(1) { left: 10%; }
+        .bg-bubbles li:nth-child(2) { left: 20%; width: 80px; height: 80px; animation-delay: 2s; animation-duration: 17s; }
+        .bg-bubbles li:nth-child(3) { left: 25%; animation-delay: 4s; }
+        .bg-bubbles li:nth-child(4) { left: 40%; width: 60px; height: 60px; animation-duration: 22s; background-color: rgba(255, 255, 255, 0.2); }
+        .bg-bubbles li:nth-child(5) { left: 70%; }
+        .bg-bubbles li:nth-child(6) { left: 80%; width: 120px; height: 120px; animation-delay: 3s; background-color: rgba(255, 255, 255, 0.15); }
+        .bg-bubbles li:nth-child(7) { left: 32%; width: 160px; height: 160px; animation-delay: 7s; }
+        .bg-bubbles li:nth-child(8) { left: 55%; width: 20px; height: 20px; animation-delay: 15s; animation-duration: 40s; }
+        .bg-bubbles li:nth-child(9) { left: 25%; width: 10px; height: 10px; animation-delay: 2s; animation-duration: 40s; background-color: rgba(255, 255, 255, 0.25); }
+        .bg-bubbles li:nth-child(10) { left: 90%; width: 160px; height: 160px; animation-delay: 11s; }
+
+        @keyframes square {
+            0% { transform: translateY(0) rotate(0deg); opacity: 1; }
+            100% { transform: translateY(-1080px) rotate(720deg); opacity: 0; }
+        }
     </style>
 </head>
 <body class="bg-gradient-to-br from-gray-900 via-indigo-900 to-purple-900 text-gray-200">
+    
+    <!-- Latar Belakang Animasi -->
+    <ul class="bg-bubbles">
+        <li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
+    </ul>
 
     <!-- ===== LAYAR AUTENTIKASI (LOGIN & REGISTER) ===== -->
     <div id="auth-screen" class="view-screen active min-h-screen w-full flex-col items-center justify-center p-4">
         <div class="w-full max-w-md">
             <!-- Form Login -->
             <div id="login-view">
-                <div class="glass-card p-8 rounded-2xl shadow-2xl"><h2 class="text-3xl font-bold text-center text-cyan-300 mb-6">Sign In</h2><form id="login-form" class="space-y-6"><div><label for="login-phone" class="text-sm font-medium text-indigo-200">No. Telepon</label><input type="tel" id="login-phone" required class="w-full p-3 mt-1 bg-gray-800/50 border-2 border-indigo-700 rounded-lg focus:ring-2 focus:ring-cyan-400 focus:outline-none placeholder-gray-500" placeholder="081XXXXX789"></div><div><label for="login-password" class="text-sm font-medium text-indigo-200">Password</label><input type="password" id="login-password" required class="w-full p-3 mt-1 bg-gray-800/50 border-2 border-indigo-700 rounded-lg focus:ring-2 focus:ring-cyan-400 focus:outline-none" placeholder="••••••••"></div><button type="submit" class="w-full bg-gradient-to-r from-cyan-500 to-blue-500 hover:from-cyan-600 hover:to-blue-600 text-white font-bold py-3 px-4 rounded-lg smooth-transition shadow-lg">Masuk</button></form><p class="text-center text-sm text-gray-400 mt-6">Belum punya akun? <button id="show-register-btn" class="font-semibold text-cyan-400 hover:underline">Daftar sekarang</button></p></div>
+                <div class="glass-card p-8 rounded-2xl shadow-2xl"><h2 class="text-3xl font-bold text-center text-cyan-300 mb-6">Sign In</h2><form id="login-form" class="space-y-6"><div><label for="login-phone" class="text-sm font-medium text-indigo-200">No. Telepon</label><input type="tel" id="login-phone" required class="w-full p-3 mt-1 bg-gray-800/50 border-2 border-indigo-700 rounded-lg focus:ring-2 focus:ring-cyan-400 focus:outline-none placeholder-gray-500" placeholder="08XXXXXX789"></div><div><label for="login-password" class="text-sm font-medium text-indigo-200">Password</label><input type="password" id="login-password" required class="w-full p-3 mt-1 bg-gray-800/50 border-2 border-indigo-700 rounded-lg focus:ring-2 focus:ring-cyan-400 focus:outline-none" placeholder="••••••••"></div><button type="submit" class="w-full bg-gradient-to-r from-cyan-500 to-blue-500 hover:from-cyan-600 hover:to-blue-600 text-white font-bold py-3 px-4 rounded-lg smooth-transition shadow-lg">Masuk</button></form><p class="text-center text-sm text-gray-400 mt-6">Belum punya akun? <button id="show-register-btn" class="font-semibold text-cyan-400 hover:underline">Daftar sekarang</button></p></div>
             </div>
             <!-- Form Register -->
             <div id="register-view" class="hidden">
@@ -222,7 +276,6 @@
                 e.target.reset();
             }
         };
-
         const handleLogin = async (e) => {
             e.preventDefault();
             const phone = document.getElementById('login-phone').value;
@@ -237,7 +290,6 @@
                 } else { showNotification("Password salah.", true); }
             } else { showNotification("Nomor telepon tidak ditemukan.", true); }
         };
-
         const handleLogout = () => {
             if (unsubscribeUser) unsubscribeUser();
             if (unsubscribeHistory) unsubscribeHistory();
@@ -268,7 +320,6 @@
                 isInitialHistoryLoad = false;
             });
         };
-
         const renderHistory = (historyData) => {
             const historyList = document.getElementById('history-list');
             if (!historyList) return;
