--- a/main.html
+++ b/main.html
@@ -218,7 +218,7 @@
                 <p class="text-indigo-200 text-lg">Saldo Anda</p>
                 <p id="balance-display" class="text-4xl md:text-5xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-cyan-300 to-green-300 mt-2">Rp 0</p>
             </div>
-            <div class="w-full max-w-4xl mx-auto grid grid-cols-4 gap-4 text-center">
+            <div class="w-full max-w-4xl mx-auto grid grid-cols-3 gap-4 text-center mb-6">
                 <button id="show-transfer-btn" class="glass-card p-4 rounded-xl flex flex-col items-center justify-center hover:border-cyan-400 smooth-transition">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 mb-2 text-cyan-300" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v.01" />
@@ -237,8 +237,16 @@
                     </svg>
                     <span class="font-semibold">Pinjam</span>
                 </button>
-                <a href="Link.html" class="glass-card p-4 rounded-xl flex flex-col items-center justify-center hover:border-purple-400 smooth-transition">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 mb-2 text-purple-300" viewBox="0 0 20 20" fill="currentColor">
+            </div>
+            <div class="w-full max-w-4xl mx-auto grid grid-cols-3 gap-4 text-center">
+                <button id="show-link-btn" class="glass-card p-4 rounded-xl flex flex-col items-center justify-center hover:border-purple-400 smooth-transition">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 mb-2 text-purple-300" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" />
+                    </svg>
+                    <span class="font-semibold">Link</span>
+                </button>
+                <a href="Link.html" class="glass-card p-4 rounded-xl flex flex-col items-center justify-center hover:border-orange-400 smooth-transition">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 mb-2 text-orange-300" viewBox="0 0 20 20" fill="currentColor">
                         <path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" />
                     </svg>
                     <span class="font-semibold">Toko</span>
@@ -298,6 +306,9 @@
                 document.getElementById('show-topup-btn').addEventListener('click', () => openModal('key-modal'));
                 document.getElementById('show-pinjam-btn').addEventListener('click', () => {
                     window.location.href = `PinjamUang.html?phone=${currentUser.phoneNumber}`;
+                });
+                document.getElementById('show-link-btn').addEventListener('click', () => {
+                    window.location.href = `Link.html?phone=${currentUser.phoneNumber}&balance=${currentUser.balance}`;
                 });
                 updateDashboardUI();
                 listenForHistory(null, true);
@@ -412,10 +423,11 @@
                     case 'TOPUP': title = 'Top Up Saldo'; partyInfo = `Melalui sistem`; amountClass = 'text-blue-400'; break;
                     case 'PINJAMAN': title = 'Pinjaman Disetujui'; partyInfo = `ID: ${tx.loanId}`; amountClass = 'text-yellow-400'; break;
                     case 'BAYAR_PINJAMAN': title = 'Bayar Pinjaman'; partyInfo = `ID: ${tx.loanId}`; amountClass = 'text-red-400'; break;
+                    case 'BELI_LINK': title = 'Pembelian Link'; partyInfo = `${tx.linkTitle}`; amountClass = 'text-red-400'; break;
                 }
                 const item = document.createElement('div');
                 item.className = 'glass-card p-4 rounded-lg flex items-center justify-between cursor-pointer hover:border-cyan-400 smooth-transition';
-                item.innerHTML = `<div><p class="font-bold ${amountClass}">${title}</p><p class="text-sm text-gray-300">${partyInfo}</p><p class="text-xs text-gray-500 mt-1">ID: ${tx.transactionId}</p></div><div class="text-right"><p class="font-bold text-lg ${amountClass}">${tx.type === 'KELUAR' || tx.type === 'BAYAR_PINJAMAN' ? '-' : '+'} ${formattedAmount}</p><p class="text-xs text-gray-500">${formattedDate}</p></div>`;
+                item.innerHTML = `<div><p class="font-bold ${amountClass}">${title}</p><p class="text-sm text-gray-300">${partyInfo}</p><p class="text-xs text-gray-500 mt-1">ID: ${tx.transactionId}</p></div><div class="text-right"><p class="font-bold text-lg ${amountClass}">${tx.type === 'KELUAR' || tx.type === 'BAYAR_PINJAMAN' || tx.type === 'BELI_LINK' ? '-' : '+'} ${formattedAmount}</p><p class="text-xs text-gray-500">${formattedDate}</p></div>`;
                 item.addEventListener('click', () => showHistoryDetail(tx));
                 historyList.appendChild(item);
             });
@@ -439,7 +451,7 @@
             historyData.forEach(tx => {
                 if (tx.type === 'MASUK' || tx.type === 'TOPUP' || tx.type === 'PINJAMAN') {
                     totalIn += tx.amount;
-                } else if (tx.type === 'KELUAR' || tx.type === 'BAYAR_PINJAMAN') {
+                } else if (tx.type === 'KELUAR' || tx.type === 'BAYAR_PINJAMAN' || tx.type === 'BELI_LINK') {
                     totalOut += tx.amount;
                 }
             });
@@ -453,7 +465,7 @@
             const formattedAmount = new Intl.NumberFormat('id-ID', { style: 'currency', currency: 'IDR', minimumFractionDigits: 0 }).format(tx.amount);
             let statusText, statusClass;
             switch(tx.type) {
-                case 'MASUK': case 'KELUAR': case 'TOPUP': case 'PINJAMAN': case 'BAYAR_PINJAMAN': statusText = 'BERHASIL'; statusClass = 'text-green-400'; break;
+                case 'MASUK': case 'KELUAR': case 'TOPUP': case 'PINJAMAN': case 'BAYAR_PINJAMAN': case 'BELI_LINK': statusText = 'BERHASIL'; statusClass = 'text-green-400'; break;
                 default: statusText = 'TIDAK DIKETAHUI'; statusClass = 'text-gray-400';
             }
             document.getElementById('detail-status').textContent = statusText;
