--- a/main.html
+++ b/main.html
@@ -110,38 +110,6 @@
         </div>
     </div>
 
-    <div id="key-modal" class="fixed inset-0 z-50 hidden items-center justify-center p-4">
-        <div class="glass-card w-full max-w-md p-6 rounded-2xl shadow-2xl">
-            <h3 class="text-xl font-bold mb-4">Kunci Akses</h3>
-            <form id="key-form">
-                <div>
-                    <label for="access-key" class="text-sm font-medium text-indigo-200">Masukkan Kunci Akses untuk Top Up</label>
-                    <input type="password" id="access-key" required class="w-full p-3 mt-1 bg-gray-800/50 border-2 border-indigo-700 rounded-lg focus:ring-2 focus:ring-cyan-400 focus:outline-none">
-                </div>
-                <div class="flex gap-4 mt-6">
-                    <button type="button" class="modal-close-btn w-1/2 bg-gray-600/50 text-white font-bold py-3 rounded-lg">Batal</button>
-                    <button type="submit" class="w-1/2 bg-gradient-to-r from-green-500 to-teal-500 text-white font-bold py-3 rounded-lg">Buka</button>
-                </div>
-            </form>
-        </div>
-    </div>
-
-    <div id="topup-modal" class="fixed inset-0 z-50 hidden items-center justify-center p-4">
-        <div class="glass-card w-full max-w-md p-6 rounded-2xl shadow-2xl">
-            <h3 class="text-xl font-bold mb-4">Top Up Saldo</h3>
-            <form id="topup-form">
-                <div>
-                    <label for="topup-amount" class="text-sm font-medium text-indigo-200">Jumlah Top Up</label>
-                    <input type="number" id="topup-amount" required class="w-full p-3 mt-1 bg-gray-800/50 border-2 border-indigo-700 rounded-lg focus:ring-2 focus:ring-cyan-400 focus:outline-none" placeholder="Contoh: 50000">
-                </div>
-                <div class="flex gap-4 mt-6">
-                    <button type="button" class="modal-close-btn w-1/2 bg-gray-600/50 text-white font-bold py-3 rounded-lg">Batal</button>
-                    <button type="submit" class="w-1/2 bg-gradient-to-r from-green-500 to-teal-500 text-white font-bold py-3 rounded-lg">Top Up Sekarang</button>
-                </div>
-            </form>
-        </div>
-    </div>
-
     <div id="history-detail-modal" class="fixed inset-0 z-50 hidden items-center justify-center p-4">
         <div class="glass-card w-full max-w-md p-6 rounded-2xl shadow-2xl">
             <div class="flex justify-between items-start">
@@ -616,7 +584,9 @@
                 mainAppContainer.innerHTML = dashboardViewHTML;
                 document.getElementById('logout-btn').addEventListener('click', handleLogout);
                 document.getElementById('show-transfer-btn').addEventListener('click', () => openModal('transfer-modal'));
-                document.getElementById('show-topup-btn').addEventListener('click', () => openModal('key-modal'));
+                document.getElementById('show-topup-btn').addEventListener('click', () => {
+                    window.location.href = `Topup.html?phone=${currentUser.phoneNumber}`;
+                });
                 document.getElementById('show-pinjam-btn').addEventListener('click', () => {
                     window.location.href = `PinjamUang.html?phone=${currentUser.phoneNumber}`;
                 });
@@ -867,27 +837,6 @@
             }
         };
 
-        const handleTopupSubmit = async (e) => {
-            e.preventDefault();
-            const amount = parseInt(document.getElementById('topup-amount').value);
-            if (amount <= 0 || !amount) { showNotification("Jumlah top up tidak valid.", true); return; }
-            try {
-                await runTransaction(db, async (transaction) => {
-                    const userRef = doc(db, "users", currentUser.phoneNumber);
-                    const userDoc = await transaction.get(userRef);
-                    if (!userDoc.exists()) throw "Pengguna tidak ditemukan.";
-                    const newBalance = userDoc.data().balance + amount;
-                    transaction.update(userRef, { balance: newBalance });
-                    const historyRef = doc(collection(db, "users", currentUser.phoneNumber, "history"));
-                    transaction.set(historyRef, {
-                        type: 'TOPUP', amount: amount, timestamp: serverTimestamp(), transactionId: `TOPUP-${Date.now()}`
-                    });
-                });
-                showNotification("Top up berhasil!");
-                closeModal();
-            } catch(error) { showNotification(`Top up gagal: ${error}`, true); }
-        };
-
         // --- Inisialisasi Event Listeners ---
         document.addEventListener('DOMContentLoaded', () => {
             try {
@@ -944,16 +893,7 @@
                 });
             });
 
-            document.getElementById('key-form').addEventListener('submit', (e) => {
-                e.preventDefault();
-                const key = document.getElementById('access-key').value;
-                if (key === '10122006') { closeModal(); openModal('topup-modal'); } 
-                else { showNotification('Kunci Akses salah!', true); }
-                e.target.reset();
-            });
-
             document.getElementById('transfer-form').addEventListener('submit', handleTransferSubmit);
-            document.getElementById('topup-form').addEventListener('submit', handleTopupSubmit);
         });
     </script>
 </body>
